# eagine-oglplus

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  README.rst
assets/: CMakeLists.txt
assets/textures/: CMakeLists.txt
config/: EAGinePackageOGLplus.cmake  FindEAGineGL.cmake  FindEAGineGLEW.cmake  FindEAGineGLFW3.cmake  FindEAGineGLX.cmake  FindEAGinePNG.cmake  FindEAGineQT5GL.cmake  FindEAGineSDL.cmake  OGLplusBaking.cmake
deploy/: CMakeLists.txt
deploy/debian/: CMakeLists.txt  build-pkg-cfg.in  build-pkg.sh.in  pkg-headers.txt.in
deploy/dpkg/: CMakeLists.txt
deploy/dpkg/apps/: CMakeLists.txt  build-pkg.sh.in
deploy/dpkg/assets/: CMakeLists.txt  build-pkg.sh.in
deploy/dpkg/dev/: CMakeLists.txt  build-pkg.py.in
deploy/dpkg/tools/: CMakeLists.txt  build-pkg.sh.in
doc/diagrams/GL/: vertex_specification.puml
doc/doxygen/: README.md
doc/doxygen/include/: oglplus.hpp
doc/howto/: record_video.rst
doc/sphinx/: README.md
docker/deb_test/dev/: CMakeLists.txt  Dockerfile  docker-compose.yml  entrypoint
docker/deb_test/dev/example/: CMakeLists.txt
example/: CMakeLists.txt
example/eagine/: CMakeLists.txt
example/eagine/oglplus/: 001_clear.cpp  001_info.cpp  002_clear.cpp  003_mandelbrot.cpp  003_spectrum.cpp  004_cartoon_sun.cpp  004_mandelbrot.cpp  005_cartoon_sun.cpp  005_mandelbrot.cpp  005_writing.cpp  006_metaballs.cpp  006_writing.cpp  007_metaballs.cpp  007_round_cube.cpp  008_metallic_torus.cpp  008_round_cube.cpp  008_worley_waves.cpp  009_metallic_torus.cpp  009_occlusion.cpp  009_round_cube.cpp  010_metallic_torus.cpp  010_text_rendering.cpp  011_single_pass_edges.cpp  011_text_rendering.cpp  012_single_pass_edges.cpp  012_tessellation.cpp  013_displacement.cpp  013_subroutines.cpp  013_tessellation.cpp  013_texture_projection.cpp  014_cloud_morphing.cpp  014_subroutines.cpp  014_tessellation.cpp  014_texture_projection.cpp  014_worleycraft.cpp  015_cloud_morphing.cpp  015_subroutines.cpp  015_tessellation.cpp  015_wooden_crate.cpp  015_worleycraft.cpp  (+39 more)
include/: CMakeLists.txt  Sources.cmake  classify_headers.sh
include/eagine/oglplus/: basic_gl_api.hpp  camera.hpp  camera.inl  framebuffer.hpp  framebuffer.inl  gl.hpp  gl_api.hpp  gl_api.inl  gl_api_fwd.hpp  gl_debug_logger.hpp  gl_def.hpp  gl_def.inl  gl_fallback.hpp  glsl_program.hpp
include/eagine/oglplus/config/: basic.hpp  site.hpp.in
include/eagine/oglplus/gl_api/: api.hpp  api.inl  api_traits.hpp  api_traits.inl  c_api.hpp  c_api.inl  config.hpp  constants.hpp  constants.inl  enum_class.hpp  enum_types.hpp  extensions.hpp  object_name.hpp  objects.hpp  prog_var_loc.hpp  result.hpp  type_utils.hpp
include/eagine/oglplus/glsl/: container.hpp  source_ref.hpp  string_ref.hpp
include/eagine/oglplus/math/: config.hpp  coordinates.hpp  interpolate.hpp  matrix.hpp  matrix_ctrs.hpp  primitives.hpp  sign.hpp  vector.hpp
include/eagine/oglplus/shapes/: bindings.hpp  drawing.hpp  drawing.inl  generator.hpp  generator.inl  geometry.hpp
include/eagine/oglplus/utils/: buffer_data.hpp  buffer_size.hpp  image_file.hpp  image_file_hdr.hpp  image_file_io.hpp  image_spec.hpp  program_file.hpp  program_file_hdr.hpp
source/: CMakeLists.txt
source/app/: CMakeLists.txt  deb-changelog  generate_eagitexi.py  png-transitions.py  png_to_eagitexi.py  png_transitions.py  tiling-to-eagitexi.py  tiling_to_eagitexi.py
source/lib/: CMakeLists.txt
source/lib/eagine-oglplus/: CMakeLists.txt
source/modules/eagine/: CMakeLists.txt  api.cpp  api_impl.cpp  api_traits.cpp  c_api.cpp  camera.cpp  camera_impl.cpp  config.cpp  constants.cpp  constants_impl.cpp  constants_test.cpp  deb-changelog  enum_types.cpp  extensions.cpp  framebuffer.cpp  framebuffer_impl.cpp  from_string.cpp  from_string_impl.cpp  gl_debug_logger.cpp  gl_debug_logger_impl.cpp  gl_def.hpp  glsl_program.cpp  glsl_source.cpp  gpu_program.cpp  gpu_program_impl.cpp  image_spec.cpp  image_spec_impl.cpp  math.cpp  objects.cpp  oglplus.cpp  prog_var_loc.cpp  program_source.cpp  resources.cpp  resources_impl.cpp  result.cpp  shapes.cpp  shapes_impl.cpp  type_utils.cpp
source/tools/: CMakeLists.txt  combine_rgb.sh  png_to_eagitex.py  png_to_eagitexi.py  png_transitions.py  tiling_eagitexi.py
source/tools/bake_checker_image/: CMakeLists.txt  main.cpp
source/tools/bake_noise_image/: CMakeLists.txt  main.cpp
source/tools/bake_png_image/: CMakeLists.txt  main.cpp
source/tools/bake_program_source/: CMakeLists.txt  main.cpp
source/tools/bake_shader_source/: CMakeLists.txt  main.cpp
source/tools/bake_tiling_image/: CMakeLists.txt  main.cpp
submodules/: CMakeLists.txt
